--- a/os/config/kitty/kitty.conf
+++ b/os/config/kitty/kitty.conf
@@ -259,7 +259,7 @@ font_size 12.0
 #: The set of URL prefixes to look for when detecting a URL under the
 #: mouse cursor.
 
-# copy_on_select no
+copy_on_select no
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, simply selecting text with the mouse will cause the text
@@ -348,12 +348,12 @@ font_size 12.0
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
 
-# visual_bell_duration 0.0
+visual_bell_duration 0.02
 
 #: Visual bell duration. Flash the screen when a bell occurs for the
 #: specified number of seconds. Set to zero to disable.
@@ -363,7 +363,7 @@ font_size 12.0
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on linux.
 
-# bell_on_tab yes
+bell_on_tab no
 
 #: Show a bell symbol on the tab if a bell occurs in one of the
 #: windows in the tab and the window is not the currently focused
@@ -410,7 +410,7 @@ font_size 12.0
 #: borders are displayed only when more than one window is visible.
 #: They are meant to separate multiple windows.
 
- draw_minimal_borders yes
+# draw_minimal_borders yes
 
 #: Draw only the minimum borders needed. This means that only the
 #: minimum needed borders for inactive windows are drawn. That is only
@@ -469,7 +469,7 @@ font_size 12.0
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
- hide_window_decorations yes
+# hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -1051,6 +1051,7 @@ font_size 12.0
 #: the working directory of the current window using::
 
 #:     map ctrl+alt+enter    launch --cwd=current
+map kitty_mod+enter    launch --cwd=current
 
 #: You can open a new window that is allowed to control kitty via the
 #: kitty remote control facility by prefixing the command line with @.
