--- a/os/config/kitty/kitty.conf
+++ b/os/config/kitty/kitty.conf
@@ -389,6 +389,7 @@ bell_on_tab no
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
+ enabled_layouts Fat, Tall, Stack
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1126,6 +1127,7 @@ map kitty_mod+enter    launch --cwd=current
 
 #:     map ctrl+alt+t goto_layout tall
 #:     map ctrl+alt+s goto_layout stack
+     map ctrl+alt+m toggle_layout stack
 
 #: Similarly, to switch back to the previous layout::
 
