Update neovim setup

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,6 +1,7 @@
 {
   "workspace.workspaceFolderCheckCwd": true,
   "coc.preferences.formatOnSaveFiletypes": ["css", "markdown"],
+  "diagnostic.enableMessage": "jump",
   "eslint.packageManager": "yarn",
   "eslint.nodePath": ".yarn/sdks",
   "tsserver.enable": true,
