--- a/os/config/kitty/kitty.conf
+++ b/os/config/kitty/kitty.conf
@@ -389,7 +389,7 @@ bell_on_tab no
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
- enabled_layouts Fat, Tall, Stack
+ enabled_layouts Tall, Fat, Stack
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -849,7 +849,7 @@ bell_on_tab no
 #: you are probably better off just hiding the titlebar with
 #: hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt left
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
