Add theme to kitty

--- a/os/config/kitty/kitty.conf
+++ b/os/config/kitty/kitty.conf
@@ -588,8 +588,9 @@ bell_on_tab no
 
 #: Color scheme {{{
 
- foreground #c5c8c6
- background #1d1f21
+ # foreground #c5c8c6
+ # background #1d1f21
+ include ./Afterglow.conf
 
 #: The foreground and background colors
 
