tmux: Add note to install

--- a/shell/tmux/.tmux.conf
+++ b/shell/tmux/.tmux.conf
@@ -25,7 +25,7 @@ set -g @fzf-url-history-limit '2000'
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
-# Plugins
+# Plugins (After add, press <prefix> I, to install
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
