--- a/shell/starship/starship.toml
+++ b/shell/starship/starship.toml
@@ -92,19 +92,19 @@ style = "bg:color_aqua"
 format = '[[ $symbol $branch ](fg:color_fg0 bg:color_aqua)]($style)'
 
 [git_status]
-conflicted = '⛔️'
-ahead = '⇡${count}'
-diverged = '😵${ahead_count}⇣${behind_count}'
-behind = '⇣${count}'
-up_to_date = '✅'
-untracked = '🤷'
-stashed = '📦'
-modified = 'M'
-staged = '[++\($count\)](green)'
-renamed = '👅'
-deleted = '🗑'
+conflicted = '󱠿 '
+ahead = '⇡${count} '
+diverged = '󰦻 ${ahead_count}⇣${behind_count} '
+behind = '⇣ ${count} '
+up_to_date = '  '
+untracked = '󰾋  '
+stashed = '  '
+modified = '  '
+staged = ' \[$count\] '
+renamed = '󰑕 '
+deleted = '🗑 '
 style = "bg:color_aqua"
-format = '[[($all_status$ahead_behind )](fg:color_fg0 bold bg:color_aqua)]($style)'
+format = '[[ ($all_status$ahead_behind)](fg:color_fg0 bold bg:color_aqua)]($style)'
 
 [nodejs]
 symbol = ""
@@ -166,7 +166,7 @@ style = "bg:color_bg3"
 format = '[[ $symbol( $environment) ](fg:#83a598 bg:color_bg3)]($style)'
 
 [package]
-symbol = "🎁"
+symbol = " "
 style = "bg:color_bg3"
 format = '[$symbol $version]($style) '
 
