--- a/shell/starship/starship.toml
+++ b/shell/starship/starship.toml
@@ -26,6 +26,15 @@ $cmd_duration\
 [ ](fg:color_bg1)\
 $line_break$character"""
 
+# All commands executed by starship (in milliseconds)
+command_timeout = 3600000
+
+# Timeout for starship to scan files (in milliseconds).
+scan_timeout = 500
+
+# Add blank line between prompts
+add_newline = true
+
 palette = 'gruvbox_dark'
 
 [palettes.gruvbox_dark]
@@ -45,18 +54,18 @@ disabled = false
 style = "bg:color_orange fg:color_fg0"
 
 [os.symbols]
-Windows = "󰍲"
-Ubuntu = "󰕈"
-Raspbian = "󰐿"
-Mint = "󰣭"
-Macos = "󰀵"
-Manjaro = ""
-Linux = "󰌽"
-Alpine = ""
-Amazon = ""
-Android = ""
-Arch = "󰣇"
-Debian = "󰣚"
+Windows = "󰍲 "
+Ubuntu = "󰕈 "
+Raspbian = "󰐿 "
+Mint = "󰣭 "
+Macos = "󰀵 "
+Manjaro = " "
+Linux = "󰌽 "
+Alpine = " "
+Amazon = " "
+Android = " "
+Arch = "󰣇 "
+Debian = "󰣚 "
 
 [username]
 show_always = true
@@ -83,22 +92,22 @@ style = "bg:color_aqua"
 format = '[[ $symbol $branch ](fg:color_fg0 bg:color_aqua)]($style)'
 
 [git_status]
-conflicted = '⛔️'
-ahead = '⇡${count}'
-diverged = '😵${ahead_count}⇣${behind_count}'
-behind = '⇣${count}'
-up_to_date = '✅'
-untracked = '🤷'
-stashed = '📦'
-modified = 'M'
-staged = '[++\($count\)](green)'
-renamed = '👅'
-deleted = '🗑'
+conflicted = '󱠿 '
+ahead = '⇡${count} '
+diverged = '󰦻 ${ahead_count}⇣${behind_count} '
+behind = '⇣ ${count} '
+up_to_date = ' '
+untracked = '[󰾋 ](fg:color_orange bg:color_aqua)'
+stashed = '[ ](fg:color_bg3 bg:color_aqua)'
+modified = '[ ](fg:color_orange bg:color_aqua)'
+staged = ' \[$count\] '
+renamed = '[󰑕 ](fg:color_orange bg:color_aqua)'
+deleted = '[🗑 ](fg:color_red bg:color_aqua)'
 style = "bg:color_aqua"
-format = '[[($all_status$ahead_behind )](fg:color_fg0 bold bg:color_aqua)]($style)'
+format = '[[ ($all_status$ahead_behind)](fg:color_fg0 bold bg:color_aqua)]($style)'
 
 [nodejs]
-symbol = ""
+symbol = " "
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
@@ -108,17 +117,17 @@ style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [rust]
-symbol = ""
+symbol = " "
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [golang]
-symbol = ""
+symbol = " "
 style = "bg:color_blue"
 format = '[[ $symbol( $version)( $mod_version) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [php]
-symbol = ""
+symbol = " "
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
@@ -128,12 +137,12 @@ style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [kotlin]
-symbol = ""
+symbol = " "
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [haskell]
-symbol = ""
+symbol = " "
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
@@ -143,12 +152,12 @@ style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [python]
-symbol = ""
+symbol = " "
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
 [docker_context]
-symbol = ""
+symbol = " "
 style = "bg:color_bg3"
 format = '[[ $symbol( $context) ](fg:#83a598 bg:color_bg3)]($style)'
 
@@ -157,7 +166,7 @@ style = "bg:color_bg3"
 format = '[[ $symbol( $environment) ](fg:#83a598 bg:color_bg3)]($style)'
 
 [package]
-symbol = "🎁"
+symbol = " "
 style = "bg:color_bg3"
 format = '[$symbol $version]($style) '
 
