--- a/shell/tmux/.tmux.conf
+++ b/shell/tmux/.tmux.conf
@@ -13,10 +13,19 @@ set -g set-clipboard on          # use system clipboard
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+bind-key C-h resize-pane -L 30
+bind-key C-j resize-pane -D 20
+bind-key C-k resize-pane -U 20
+bind-key C-l resize-pane -R 30
 
 set-option -g status-position top
 
@@ -25,7 +34,7 @@ set -g @fzf-url-history-limit '2000'
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
-# Plugins
+# Plugins (After add, press <prefix> I, to install
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
